Prevent grid blowout when the audio select box is too big.
See: https://css-tricks.com/preventing-a-grid-blowout/

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button#pingCenter {
 
 #controlContainer {
   display: grid;
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: max-content minmax(0, 1fr);
   column-gap: 0.5em;
   row-gap: 0.5em;
 }
@@ -77,6 +77,7 @@ button#pingCenter {
   margin: 0;
   height: 100%;
   vertical-align: top;
+  max-width: 50%;
 }
 
 #volumeSlider {
